--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <!--
             MADE WITH <3 AND JAVASCRIPT
         -->
+        <div>
+        </div>
         
         <p>
             Welcome to Brackets, a modern open-source code editor that understands web design. It's a lightweight,
@@ -183,4 +185,6 @@
         
     </body>
 </html>
+
+
 
